# stochastic-shadows

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  generate_bsp.cpp  interactive.cpp  ltc_many_lights.cpp  ltc_testbed.cpp  model.cpp  scene.cpp  test_bf.cu  testbed.cpp
cuda/: frostbite.cu  interactive.cu  ltc_many_lights_cuda.cu  ltc_testbed.cu
cuda_headers/: bf.cuh  bvh.cuh  common.cuh  constants.cuh  frostbite.cuh  frostbite_anisotropic.cuh  hit.cuh  interactive.cuh  lcg_random.cuh  lcg_random.h  light_sampling.cuh  ltc_many_lights_cuda.cuh  ltc_utils.cuh  polygon_utils.cuh  reservoir.cuh  set.cuh  sil_utils.cuh  utils.cuh
cuda_headers/renderers/: direct_lighting.cuh  direct_noshadows.cuh  ltc_baseline.cuh  ltc_lbvh.cuh  ltc_lbvh_poly.cuh  ltc_lbvh_sil.cuh  ltc_lbvh_tri.cuh  ltc_monte_carlo.cuh  restir.cuh  sil_test.cuh
cuda_headers/samplers/: ris.cuh  uniform.cuh
headers/: bsp.hpp  bvh.hpp  common.h  flags.hpp  light.hpp  mesh.hpp  model.h  scene.h  serialize.hpp  silhouetteConvex.hpp  tiny_obj_loader.h  twoPassBsp.hpp  types.hpp  utils.hpp  viewer.hpp
headers/cuda_headers/: bf.cuh  common.cuh  frostbite_anisotropic.cuh  lcg_random.cuh  utils.cuh
headers/cuda_headers/renderers/: ltc_lbvh_sil copy.cuh  ltc_lbvh_sil.cuh
headers/cuda_headers/types/: bsp.cuh
outputs/: stats.json
owl/samples/common/owlViewer/: OWLViewer.cpp
precomputation/: ltc_isotropic.h
scenes/obj_files/test_scene/: area_lights.mtl  scene.blend  scene.blend1  scene.mtl
scenes/scene_configs/: bistro.json  silhoutte_test.json  test_scene.json
src/: bsp.cpp  bvh.cpp  light.cpp  mesh.cpp  model.cpp  scene.cpp  silhouetteConvex.cpp  twoPassBsp.cpp  utils.cpp  viewer.cpp
test/: CMakeLists.txt  test_bvh.cu  test_ltc.cu
utils/: generate_bsp.cpp  test_bf.cu
utils/headers/: bvh.hpp  scene.h  twoPassBsp.hpp  types.hpp
utils/owl/owl/: CMakeLists.txt
utils/owl/samples/common/owlViewer/: OWLViewer.cpp  OWLViewer.h
utils/precomputation/: ltc_isotropic.h
utils/scripts/: blender_export.py
utils/src/: bsp.cpp  mesh.cpp  scene.cpp  viewer.cpp
